modify-html-css

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </header>
     
     <main>
-        <img src ="./assets/images/digital-marketing-meeting.jpg" alt="people doing marketing">
-        <article class="content">
-            <section>
+        <img src ="./assets/images/digital-marketing-meeting.jpg" alt="people doing marketing" class="hero">
+        <section class="content">
+            <section id="search-engine-optimization" class="search-engine-optimization">
                     <img src ="./assets/images/search-engine-optimization.jpg" alt="SEO course notebook" style="float:left">
                 <h2>Search Engine Optimization</h2>
                     <p>
@@ -35,7 +35,7 @@
                     </p>
             </section>
 
-            <section>
+            <section id="online-reputation-management" class="online-reputation-management">
                     <img src="./assets/images/online-reputation-management.jpg" alt="reputation reports" style="float:right"/>
                 <h2>Online Reputation Management</h2>
                     <p>
@@ -43,17 +43,17 @@
                     </p>
             </section>
 
-            <Section>
+            <Section id="social-media-marketing" class="social-media-marketing">
                     <img src="./assets/images/social-media-marketing.jpg" alt="Different social media channels" style="float:left"/>
                 <h2>Social Media Marketing</h2>
                     <p>
                         Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                     </p>
             </Section>
-        </article>
+        </section>
 
         <Aside class="benefits">
-            <section> 
+            <section class="benefit-lead"> 
                 <h3>Lead Generation</h3>
                     <img src="./assets/images/lead-generation.png" alt="lead generation concept line icon"/>
                     <p>
@@ -61,7 +61,7 @@
                     </p>
             </section>
 
-            <section>    
+            <section class="benefit-brand">    
                 <h3>Brand Awareness</h3>
                     <img src="./assets/images/brand-awareness.png" alt="brand awareness concept line icon"/>
                     <p>
@@ -69,7 +69,7 @@
                     </p>
             </section>
 
-            <section>
+            <section class="benefit-cost">
                 <h3>Cost Management</h3>
                     <img src="./assets/images/cost-management.png" alt="cost management concept line icon"/>
                     <p>
