add-README-and-modify-HTML-CSS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     
     <main>
-        <img src ="./assets/images/digital-marketing-meeting.jpg" alt="people doing marketing" class="hero">
+        <img src ="./assets/images/digital-marketing-meeting.jpg" alt="people doing marketing" class="main-image">
         <section class="content">
             <section id="search-engine-optimization" class="search-engine-optimization">
                     <img src ="./assets/images/search-engine-optimization.jpg" alt="SEO course notebook" style="float:left">
